# s3compat

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
aws-creds/: Cargo.toml
aws-region/: Cargo.toml
aws-region/src/: region.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
s3/: Cargo.toml  all.html  index.html  sidebar-items.js
s3/bucket/: constant.CHUNK_SIZE.html  index.html  sidebar-items.js  struct.Bucket.html  struct.Tag.html  type.Query.html
s3/bucket_ops/: index.html  struct.BucketConfiguration.html  struct.CreateBucketResponse.html
s3/command/: enum.Command.html  enum.HttpMethod.html  index.html  struct.Multipart.html
s3/creds/: index.html  sidebar-items.js  struct.AssumeRoleWithWebIdentityResponse.html  struct.AssumeRoleWithWebIdentityResult.html  struct.AssumedRoleUser.html  struct.Credentials.html  struct.ResponseMetadata.html  struct.StsResponseCredentials.html
s3/deserializer/: fn.bool_deserializer.html  index.html
s3/region/: enum.Region.html  index.html
s3/request_trait/: index.html  trait.Request.html
s3/serde_types/: index.html  struct.AwsError.html  struct.BucketLocationResult.html  struct.CommonPrefix.html  struct.CompleteMultipartUploadData.html  struct.HeadObjectResult.html  struct.InitiateMultipartUploadResponse.html  struct.ListBucketResult.html  struct.ListMultipartUploadsResult.html  struct.MultipartUpload.html  struct.Object.html  struct.Owner.html  struct.Part.html
s3/signing/: constant.FRAGMENT.html  constant.FRAGMENT_SLASH.html  fn.authorization_header.html  fn.authorization_query_params_no_sig.html  fn.canonical_header_string.html  fn.canonical_query_string.html  fn.canonical_request.html  fn.canonical_uri_string.html  fn.scope_string.html  fn.signed_header_string.html  fn.signing_key.html  fn.string_to_sign.html  fn.uri_encode.html  index.html  type.HmacSha256.html
s3/surf_request/: index.html  sidebar-items.js  struct.SurfRequest.html
s3/utils/: fn.etag_for_path.html  fn.read_chunk.html  index.html  sidebar-items.js  trait.GetAndConvertHeaders.html
src/: bucket.rs  bucket_ops.rs  creds.rs  lib.rs  region.rs  surf_request.rs  utils.rs
src/s3/: bucket.rs.html  bucket_ops.rs.html  command.rs.html  creds.rs.html  deserializer.rs.html  lib.rs.html  region.rs.html  request_trait.rs.html  serde_types.rs.html  signing.rs.html  surf_request.rs.html  utils.rs.html
