[package]
name = "s3compat"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "S3 compatible object storage APIs"
repository = "https://github.com/upbasedev/s3compat"
readme = "README.md"
keywords = ["S3", "Wasabi", "Vultr", "Cloud Storage", "API"]
license = "MIT"
edition = "2018"

[dependencies]
async-std = { version = "1" }
async-trait = "0.1"
base64 = "0.13.0"
cfg-if = "1"
chrono = "0.4"
futures = { version = "0.3" }
hex = "0.4"
hmac = "0.10"
http = "0.2"
log = "0.4"
maybe-async = { version = "0.2" }
md5 = "0.7"
percent-encoding = "2"
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.4"
sha2 = "0.9"
anyhow = "1.0"
surf = { version = "2", default-features = false, features = ["hyper-client"] }
url = "2"
minidom = "0.13"
rust-ini = "0.17"
attohttpc = { version = "0.16", default-features = false, features = ["json"] }
dirs = "3"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.8"
