[package]
name = "s3compat-creds"
version = "0.1.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "Tiny Rust library for working with Amazon IAM credential,s, supports `s3compat` crate"
repository = "https://github.com/upbasedev/s3compat"
readme = "README.md"
keywords = ["AWS", "S3", "Wasabi", "Minio", "Yandex"]
license = "MIT"
edition = "2018"

[lib]
name = "awscreds"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
dirs = "3"
rust-ini = "0.16"
attohttpc = { version = "0.16", default-features = false, features = ["json"] }
url = "2"
serde-xml-rs = "0.4"
serde = "1"
serde_derive = "1"


[features]
default = ["native-tls"]
native-tls = ["attohttpc/tls"]
rustls-tls = ["attohttpc/tls-rustls"]

[dev-dependencies]
env_logger = "0.8"