[package]
name = "s3compat-region"
version = "0.1.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "Tiny Rust library for working with Amazon AWS regions, supports `s3compat` crate"
repository = "https://github.com/upbasedev/s3compat"
readme = "README.md"
keywords = ["Amazon", "AWS", "S3", "Wasabi", "Minio"]
license = "MIT"
edition = "2018"

[lib]
name = "awsregion"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
