[package]
name = "s3compat"
version = "0.1.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "Rust library for working with Amazon S3 and compatible object storage APIs"
repository = "https://github.com/upbasedev/s3compat"
readme = "README.md"
keywords = ["S3", "Wasabi", "Minio", "Yandex", "GCP"]
license = "MIT"
edition = "2018"

[lib]
name = "s3"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", optional = true }
async-trait = "0.1"
attohttpc = { version = "0.17", optional = true, default-features = false }
s3compat-creds = { version = "0.1.0", default-features = false }
s3compat-region = "0.1.0"
base64 = "0.13.0"
cfg-if = "1"
chrono = "0.4"
futures = { version = "0.3", optional = true }
hex = "0.4"
hmac = "0.10"
http = "0.2"
log = "0.4"
maybe-async = { version = "0.2" }
md5 = "0.7"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"], optional = true }
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.4"
sha2 = "0.9"
anyhow = "1.0"
surf = { version = "2", optional = true, default-features = false, features = ["hyper-client"] }
tokio = { version = "1", features = ["io-util"], optional = true, default-features = false }
tokio-stream = "0.1"
url = "2"
minidom = "0.13"

block_on_proc = { version = "0.2", optional = true }

[features]
with-tokio = ["reqwest", "tokio", "futures", "tokio/fs"]
with-async-std = ["async-std", "surf", "futures"]
sync = ["attohttpc", "maybe-async/is_sync"]
default = ["tokio-native-tls"]
no-verify-ssl = []
fail-on-err = []
tokio-native-tls = ["with-tokio", "reqwest/native-tls", "aws-creds/native-tls"]
tokio-rustls-tls = ["with-tokio", "reqwest/rustls-tls", "aws-creds/rustls-tls"]
sync-native-tls = ["sync", "aws-creds/native-tls", "attohttpc/tls"]
sync-rustls-tls = ["sync", "aws-creds/rustls-tls", "attohttpc/tls-rustls"]
blocking = ["block_on_proc", "tokio/rt", "tokio/rt-multi-thread"]
never-encode-slash = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "1", features = ["attributes"] }
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.8"
